--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="stylesheet" href="/css/mainPage.css">
 </head>
-<body>
+<body id="preload-01 preload-02 preload-03">
   <div id="container">
   </div>
   <script src="/compiled/app-bundle.js"></script>
