--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <head>
   <link rel="stylesheet" href="/css/mainPage.css">
 </head>
-<body id="preload-01 preload-02 preload-03">
+<body>
+  <div id="preload-01">
+  </div>
+  <div id="preload-02">
+  </div>
+  <div id="preload-03">
+  </div>
   <div id="container">
   </div>
   <script src="/compiled/app-bundle.js"></script>
